active states for the UI. Some other stuff

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 	<script type="riot/tag" src="tags/gallery-item.tag"></script>
 	<script type="riot/tag" src="tags/gallery.tag"></script>
 	<script type="riot/tag" src="tags/map.tag"></script>
-	<script type="text/javascript" src="http://code.jquery.com/jquery-2.0.0.min.js"></script>
 	<script type="text/javascript">
 
 	var points = [],
@@ -21,13 +20,18 @@
 		}),
 
 		artworks = [
-			{name: "Bluecadet", desc:'Lorem ipsum bluecadet', lat: 39.973665, lon:-75.134005, region: 1},
+			{name: "Bluecadet", desc:'Oh hi dis where I work', lat: 39.973665, lon:-75.134005, region: 1},
 			{name: "Will House",desc:'Hi I live here', lat: 39.963011, lon:-75.157218, region: 3},
 			{name: "Mike's House",desc:'Mike and Steve live here', lat: 39.962994, lon:-75.141753, region: 2},
 			{name: "Palm", desc:'Eat here often', lat: 39.968810, lon:-75.134125, region: 1},
 			{name: "Museum", desc:'Most notable from the film "Rocky"', lat: 39.965222, lon:-75.180472, region: 4},
 			{name: "Sir Caleb's House", desc:"Master Caleb's Residence", lat: 39.967247, lon:-75.164780, region: 4}, 
-			{name: "STAR", desc:"Street Tails Animal Rescue", lat: 39.967261, lon:-75.141187, region: 2}
+			{name: "STAR", desc:"Street Tails Animal Rescue", lat: 39.967261, lon:-75.141187, region: 2},
+			{name: "Liacouras Center", desc:"Home of Temple Basketball", lat: 39.979908, lon:-75.158308	, region: 5},
+			{name: "College of Engineering", desc:"Home of Temple Engineering", lat: 39.982371, lon:-75.153023, region: 5},
+			{name: "Temple IBC", desc:"Best Gym", lat: 39.979032, lon:-75.159148, region: 5},
+			{name: "Old Temple House", desc:"Lived here once upon a time", lat: 39.985048, lon:-75.163204, region: 5},
+			{name: "Meek's Neighborhood", desc:'"Meet me at twentysomething and berks"', lat: 39.983646, lon:-75.171908, region: 5}
 		],
 
 		regions = [
@@ -35,7 +39,8 @@
 			{id: '1', display:"Fishtown"},
 			{id: '2', display:"Northern Liberties"},
 			{id: '3', display:"East Poplar"},
-			{id: '4', display:"Fairmount"}
+			{id: '4', display:"Fairmount"},
+			{id: '5', display:"North Philly"},
 		];
 
 	function initializeMap() {
@@ -61,13 +66,13 @@
 		points.push(point);
 		
 		google.maps.event.addListener(point, 'click', (function (point) {
-        return function () {
-            console.log('Point clicked');
-            infowindow.setContent(point.title);
-            infowindow.open(map, point);
-            map.panTo(this.getPosition());
-            map.setZoom(15);
-        }
+	        return function () {
+	            console.log('Point clicked');
+	            infowindow.setContent(point.title);
+	            infowindow.open(map, point);
+	            map.panTo(this.getPosition());
+	            map.setZoom(15);
+	        }
     	})(point));
 	}
 
@@ -88,7 +93,7 @@
 		console.log(region);
 		_.each(points,function(thisPoint){
 			console.log(thisPoint);
-			if(thisPoint.region == region || region.length ===0) {
+			if(thisPoint.region == region || region.length === 0) {
 				thisPoint.setVisible(true);
 			}
 			else{
@@ -96,8 +101,6 @@
 			}
 		})
 	}
-
-	
 
 	</script>
 </head>
