--- a/index.html
+++ b/index.html
@@ -6,32 +6,29 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 	<script type="text/javascript" src="https://cdn.jsdelivr.net/g/riot@2.2(riot.min.js+compiler.min.js)"></script>
 	<script type="riot/tag" src="tags/app.tag"></script>
+	<script type="riot/tag" src="tags/map.tag"></script>
 	<script type="riot/tag" src="tags/ui.tag"></script>
 	<script type="riot/tag" src="tags/ui-button.tag"></script>
-	<script type="riot/tag" src="tags/gallery-item.tag"></script>
 	<script type="riot/tag" src="tags/gallery.tag"></script>
-	<script type="riot/tag" src="tags/map.tag"></script>
+	<script type="riot/tag" src="tags/gallery-item.tag"></script>
+	<script type="riot/tag" src="tags/listing.tag"></script>
 	<script type="text/javascript">
 
 	var points = [],
 
-		infowindow = new google.maps.InfoWindow({
-    		content: ''
-		}),
-
 		artworks = [
-			{name: "Bluecadet", desc:'Oh hi dis where I work', lat: 39.973665, lon:-75.134005, region: 1},
-			{name: "Will House",desc:'Hi I live here', lat: 39.963011, lon:-75.157218, region: 3},
-			{name: "Mike's House",desc:'Mike and Steve live here', lat: 39.962994, lon:-75.141753, region: 2},
-			{name: "Palm", desc:'Eat here often', lat: 39.968810, lon:-75.134125, region: 1},
-			{name: "Museum", desc:'Most notable from the film "Rocky"', lat: 39.965222, lon:-75.180472, region: 4},
-			{name: "Sir Caleb's House", desc:"Master Caleb's Residence", lat: 39.967247, lon:-75.164780, region: 4}, 
-			{name: "STAR", desc:"Street Tails Animal Rescue", lat: 39.967261, lon:-75.141187, region: 2},
-			{name: "Liacouras Center", desc:"Home of Temple Basketball", lat: 39.979908, lon:-75.158308	, region: 5},
+			{name: "Bluecadet", desc:'Oh hi dis where I work',mww: true, lat: 39.973665, lon:-75.134005, region: 1},
+			{name: "Will House",desc:'Hi I live here', mww: false , lat: 39.963011, lon:-75.157218, region: 3},
+			{name: "Mike's House",desc:'Mike and Steve live here', mww: false , lat: 39.962994, lon:-75.141753, region: 2},
+			{name: "Palm", desc:'Eat here often', lat: 39.968810, mww: true , lon:-75.134125, region: 1},
+			{name: "Museum", desc:'Most notable from the film "Rocky"', mww: false , lat: 39.965222, lon:-75.180472, region: 4},
+			{name: "Sir Caleb's House", desc:"Master Caleb's Residence", mww: true ,lat: 39.967247, lon:-75.164780, region: 4}, 
+			{name: "STAR", desc:"Street Tails Animal Rescue", mww: false ,lat: 39.967261, lon:-75.141187, region: 2},
+			{name: "Liacouras Center", desc:"Home of Temple Basketball", mww: true ,lat: 39.979908, lon:-75.158308	, region: 5},
 			{name: "College of Engineering", desc:"Home of Temple Engineering", lat: 39.982371, lon:-75.153023, region: 5},
-			{name: "Temple IBC", desc:"Best Gym", lat: 39.979032, lon:-75.159148, region: 5},
-			{name: "Old Temple House", desc:"Lived here once upon a time", lat: 39.985048, lon:-75.163204, region: 5},
-			{name: "Meek's Neighborhood", desc:'"Meet me at twentysomething and berks"', lat: 39.983646, lon:-75.171908, region: 5}
+			{name: "Temple IBC", desc:"Best Gym", lat: 39.979032, mww: true ,lon:-75.159148, region: 5},
+			{name: "Old Temple House", desc:"Lived here once upon a time", mww: false ,lat: 39.985048, lon:-75.163204, region: 5},
+			{name: "Meek's Neighborhood", desc:'"Meet me at twentysomething and berks"', mww: true , lat: 39.983646, lon:-75.171908, region: 5}
 		],
 
 		regions = [
@@ -43,64 +40,7 @@
 			{id: '5', display:"North Philly"},
 		];
 
-	function initializeMap() {
-	  var mapProp = {
-	    center:new google.maps.LatLng(39.961455,-75.148097),
-	    zoom:12,
-	    mapTypeId:google.maps.MapTypeId.ROADMAP
-	  };
-	  map = new google.maps.Map(document.getElementById("map"),mapProp);
-	}
-
-	function drawPoint(pointData){
-		var p = pointData;
-
-		var point = new google.maps.Marker({
-			title: p.title,
-			region: p.region,
-			position: new google.maps.LatLng(p.lat,p.lon),
-		});
-		
-		point.setMap(map);
-
-		points.push(point);
-		
-		google.maps.event.addListener(point, 'click', (function (point) {
-	        return function () {
-	            console.log('Point clicked');
-	            infowindow.setContent(point.title);
-	            infowindow.open(map, point);
-	            map.panTo(this.getPosition());
-	            map.setZoom(15);
-	        }
-    	})(point));
-	}
-
-	function drawPoints(){
-		_.each(artworks,function(artItem){
-			drawPoint({
-				title: artItem.name,
-				region: artItem.region,
-				lat: artItem.lat, 
-				lon: artItem.lon
-			});
-			console.log( artItem );
-		})
-	}
-
-	function filterPoints(e){
-		var region = this.regionSelect.value;
-		console.log(region);
-		_.each(points,function(thisPoint){
-			console.log(thisPoint);
-			if(thisPoint.region == region || region.length === 0) {
-				thisPoint.setVisible(true);
-			}
-			else{
-				thisPoint.setVisible(false);
-			}
-		})
-	}
+	
 
 	</script>
 </head>
