Still testing things

--- a/index.html
+++ b/index.html
@@ -40,6 +40,14 @@
 			{id: '5', display:"North Philly"},
 		];
 
+		
+		window.state = {//state bundle to keep track of everything in one place
+			mode: 'map',
+			mww: false,
+			filter: '',
+			search: '',
+			region: '',
+		};
 	
 
 	</script>
