--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<script src="http://maps.googleapis.com/maps/api/js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 	<script type="text/javascript" src="https://cdn.jsdelivr.net/g/riot@2.2(riot.min.js+compiler.min.js)"></script>
+	<script src="data.js"></script>
 	<script type="riot/tag" src="tags/app.tag"></script>
 	<script type="riot/tag" src="tags/map.tag"></script>
 	<script type="riot/tag" src="tags/ui.tag"></script>
